objects/Messenger__e/Messenger__e.object-meta.xml
<CustomObject>
    <description>This Platform Event will be responsible to be published when some one creates a new message</description>
    <label>Messenger</label>
    <pluralLabel>Messengers</pluralLabel>
</CustomObject>