objects/Messenger__e/fields/From_Email__c.field-meta.xml
<CustomField>
    <fullName>From_Email__c</fullName>
    <label>From Email</label>
    <length>80</length>
    <type>Text</type>
</CustomField>