objects/Messenger__e/fields/From_Name__c.field-meta.xml
<CustomField>
    <fullName>From_Name__c</fullName>
    <label>From Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>